# atl-transit-data

./: .gitignore  README.md  constants.py  get_data.py  pyproject.toml  requirements.txt  setup.sh
bigquery/: external_table_trip.sql  external_table_vehicle.sql  stop_time_updates_v.sql  trip_attributes_v.sql  vehicle_v.sql
dbt/: dbt_project.yml
dbt/models/: _sources.yml
dbt/models/stg/: stg__trip.sql  stg__vehicle.sql
marta_realtime/: get_data.py
